# Helm-Path

./: .gitattributes  .gitignore  CHANGELOG.md  GEMINI.md  Makefile  README.md  deploy.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
Test/: test_graph.py  test_logic.py
challenges/test-ctf/web/smoke-challenge/: .gitignore  .metadata.json
challenges/test-ctf/web/smoke-challenge/notes/: FAILURES.md  WORKING_NOTES.md
docker/: Dockerfile.kali  Dockerfile.lite  README.md  helm-path-hooks.bash  helm-path-hooks.zsh
helm_path/: __init__.py  ai.py  audit.py  constants.py  db.py  main.py  processing.py  reptor_bridge.py  workspace.py
helm_path.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
helm_path/graph/: __init__.py  build.py  cli.py  models.py  server.py
helm_path/graph/static/: __init__.py  app.js  graph.css  index.html
helm_path/prompts/: __init__.py  ffr_report_prompt.txt
src/: main.py
