[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "helm-path"
version = "0.2.0"
description = "Local-first CTF flight recorder and AI writeup generator"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "David", email = "your-email@example.com" }
]
dependencies = [
    "typer[all]",
    "docker",
    "rich",
    "python-dotenv",
    "ollama",
    "pypandoc"
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[project.scripts]
helm-path = "helm_path.main:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["helm_path*"]

[tool.setuptools.package-data]
"helm_path.prompts" = ["*.txt"]
